# hot-rust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  NOTES.md  README.md  RESEARCH.md  ROADMAP.md  install.sh
docs/: ARCHITECTURE.md  NOTES.md  RESEARCH.md  ROADMAP.md  WINDOWS.md
poc/: Cargo.toml  NOTES.md
poc/src/: hr.rs  hr_runtime.rs  m1.rs  m1_frida_style.rs  m1_parent.rs  m2.rs  m3.rs  m4.rs  m5.rs
scripts/: package-release.sh
src/: hr.rs  hr_runtime.rs
src/hr/: cargo_driver.rs  live.rs  ra.rs  rust_source.rs  session.rs  symbols.rs  util.rs
src/hr/patch/: mod.rs  object.rs  shadow.rs
src/hr/patch/shadow/: tree.rs  xref.rs
src/hr/ra/: driver.rs  lsp.rs  mod.rs  project.rs
