[package]
name = "hot-rust-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
ra_ap_ide = { version = "=0.0.331", optional = true }
ra_ap_paths = { version = "=0.0.331", optional = true }
ra_ap_syntax = { version = "=0.0.331", optional = true }
triomphe = { version = "0.1.16", optional = true }

[features]
hot-segment-arm64 = []
m3-oracle = [
    "dep:ra_ap_ide",
    "dep:ra_ap_paths",
    "dep:ra_ap_syntax",
    "dep:triomphe",
]

[[bin]]
name = "m1"
path = "src/m1.rs"

[[bin]]
name = "m1_parent"
path = "src/m1_parent.rs"

[[bin]]
name = "m1_frida_style"
path = "src/m1_frida_style.rs"

[[bin]]
name = "m2"
path = "src/m2.rs"

[[bin]]
name = "m3"
path = "src/m3.rs"
required-features = ["m3-oracle"]

[[bin]]
name = "m4"
path = "src/m4.rs"

[[bin]]
name = "m5"
path = "src/m5.rs"
required-features = ["m3-oracle"]

# keep functions separate/unmerged so the demo is honest
[profile.dev]
opt-level = 0
